--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ avastin_5-10mer_0.6_2/temp
 BSA_5-10mer_0.6_2/temp
 *.clstr
 templates/temp-db
+avastin_5-8mer_0.8_1/temp
+avastin_5-16mer_0.8_1/temp
+avastin_5-8mer_0.8_2/temp
